fix: wasnt able to click some buttons behind the chat

--- a/src/app/chat-bot/chat-bot.component.css
+++ b/src/app/chat-bot/chat-bot.component.css
@@ -58,7 +58,7 @@
   position: fixed;
   bottom: 20px;
   right: 20px;
-  background-color: #febf25;
+  background: linear-gradient(to right, #f6d365, #febf25);
   color: white;
   border: none;
   padding: 10px 20px;
